exercicios do dia 5-3: calendario tryber - exercício 7.

--- a/modulo1-fundamentos/bloco5-javascript-dom-eventos-web-storage/dia5-3/X-calendario-tryber/style.css
+++ b/modulo1-fundamentos/bloco5-javascript-dom-eventos-web-storage/dia5-3/X-calendario-tryber/style.css
@@ -100,6 +100,7 @@ label {
   letter-spacing: 3px;
   padding-bottom: 10px;
   vertical-align: middle;
+  display: inline-block;
 }
 
 .tasks-container {
