--- a/modulo1-fundamentos/bloco5-javascript-dom-eventos-web-storage/dia5-3/X-calendario-tryber/style.css
+++ b/modulo1-fundamentos/bloco5-javascript-dom-eventos-web-storage/dia5-3/X-calendario-tryber/style.css
@@ -77,7 +77,7 @@ label {
   width: 49%;
 }
 
-.my-tasks div {
+.task-pin {
   border: 1px solid black;
   border-radius: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -88,7 +88,7 @@ label {
   width: 35px;
 }
 
-.my-tasks div:hover {
+.task-pin:hover {
   height: 45px;
   width: 45px;
 }
