exercícios do dia 6-5: parte ii - layout para telas médias

--- a/modulo1-fundamentos/bloco6-html-css-forms-flexbox-responsivo/dia6-5/exercise2.css
+++ b/modulo1-fundamentos/bloco6-html-css-forms-flexbox-responsivo/dia6-5/exercise2.css
@@ -43,3 +43,15 @@ nav ul li {
 	.container .aside-two {
 		order: -1;
 	}
+}
+
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+	.container-aside {
+		display: flex;
+		justify-content: space-evenly;
+	}
+
+	.container > * {
+		margin: 15px 40px;
+	}
+}
