exercícios do dia 6-5: parte ii - layout para telas grandes

--- a/modulo1-fundamentos/bloco6-html-css-forms-flexbox-responsivo/dia6-5/exercise2.css
+++ b/modulo1-fundamentos/bloco6-html-css-forms-flexbox-responsivo/dia6-5/exercise2.css
@@ -55,3 +55,24 @@ nav ul li {
 		margin: 15px 40px;
 	}
 }
+
+@media screen and (min-width: 1441px) {
+	.container {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: space-around;
+	}
+
+	header, footer {
+		width: 100%;
+		margin: 60px
+	}
+
+	.container-aside {
+		max-width: 25%;
+	}
+
+	.main-content {
+		max-width: 60%;
+	}
+}
